added documentation for patch product route
